--- a/client_spa_src/debug.html
+++ b/client_spa_src/debug.html
@@ -21,6 +21,8 @@
                     <li ui-sref-active="active"><a ui-sref="home" href="#">Главная </a></li>
                     <li ui-sref-active="active"><a ui-sref="releases" href="#">Выпуски газет</a></li>
                     <li ui-sref-active="active"><a ui-sref="users" href="#">Пользователи</a></li>
+                     <li ui-sref-active="active"><a ui-sref="pageedit" href="#">Редактор страницы</a></li>
+                    <li ui-sref-active="active"><a ui-sref="about" href="#">О приложении</a></li>
                     <!--                    <li class="dropdown">
                                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
                                             <ul class="dropdown-menu">
@@ -52,7 +54,28 @@
                 </ul>
             </div>
         </div>
-        <div ui-view>Init application</div>
+        <div ui-view>
+            <div class="modal">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="open" data-dismiss="modal" aria-hidden="true">×</button>
+                            <h4 class="modal-title">Modal title</h4>
+                        </div>
+                        <div class="modal-body">
+                            <p>One fine body…</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Save changes</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            Init application
+
+        </div>
         <script>
             // var page_name = '<%- page_name %>';
             var spi_cb = function (require, config) {
