--- a/client_spa_src/debug.html
+++ b/client_spa_src/debug.html
@@ -4,6 +4,7 @@
         <title ng-bind="pageTitle"> Planner</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="styles/angular-csp.css" rel="stylesheet" type="text/css"/>
         <link href="styles/toaster.css" rel="stylesheet" />
         <link href="styles/ng-table.css" rel="stylesheet" type="text/css"/>
         <link href="http://bootswatch.com/journal/bootstrap.min.css" rel="stylesheet" type="text/css"/>
@@ -21,7 +22,7 @@
             <a class="navbar-brand" href="#">Планировщик</a>
         </div>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav ng-cloak" ng-show="isAuthenticated()">
                 <li ui-sref-active="active"><a ui-sref="home" href="#">Главная </a></li>
                 <li ui-sref-active="active"><a ui-sref="releases" href="#">Выпуски газет</a></li>
                 <li ui-sref-active="active"><a ui-sref="users" href="#">Пользователи</a></li>
@@ -43,8 +44,8 @@
             <!--                <form class="navbar-form navbar-left">
                                 <input type="text" class="form-control col-lg-8" placeholder="Search">
                             </form>-->
-            <ul class="nav navbar-nav navbar-right">
-                <!--<li><a ui-sref="home" href="#">Вход/регистрация</a></li>-->
+            <ul class="nav navbar-nav navbar-right ng-cloak">
+                <li ng-if="!isAuthenticated()" ui-sref-active="active"><a ui-sref="security" href="#">Вход</a></li>
                 <!--                    <li class="dropdown">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Профиль <b class="caret"></b></a>
                                         <ul class="dropdown-menu">
@@ -55,29 +56,17 @@
                                                                         <li><a href="#">Separated link</a></li>
                                         </ul>
                                     </li>-->
+                <li ng-if="isAuthenticated()">
+                    <button type="button" class="btn btn-default" ng-click="onSignOut()" ng-show="isAuthenticated()">Выход</button>
+                </li>
+ 
             </ul>
         </div>
     </div>
-    <div ui-view>
-        <div class="modal">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="open" data-dismiss="modal" aria-hidden="true">×</button>
-                        <h4 class="modal-title">Modal title</h4>
-                    </div>
-                    <div class="modal-body">
-                        <p>One fine body…</p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
-                    </div>
-                </div>
-            </div>
+    <div ui-view style="padding: 0">
+        <div class="container-fluid" style="padding: 15px" ui-view="main">
+            <div id="loading" class="col-lg-4 col-md-5 alert alert-warning"> Пожалуйства подождите. Идет загрузка... </div>
         </div>
-
-        Init application
 
     </div>
     <script>
