--- a/client_spa_src/debug.html
+++ b/client_spa_src/debug.html
@@ -8,8 +8,9 @@
         <link href="styles/angular-csp.css" rel="stylesheet" type="text/css"/>
         <link href="styles/toaster.css" rel="stylesheet" />
         <link href="styles/ng-table.css" rel="stylesheet" type="text/css"/>
+        <link href="styles/colorpicker.css" rel="stylesheet" type="text/css"/>
         <link href="http://bootswatch.com/journal/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     </head>
     <body
         mouse-capture
